--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Socket.io Example</title>
+    <title>JirChat Server</title>
   </head>
   <body>
-    <h1>Socket.io Example</h1>
+    <h1 style="font-family: 'Ink Free'">JirChat Server</h1>
     <script src="/socket.io/socket.io.js"></script>
     <script>
       const socket = io();
